Fixed spacing

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -75,7 +75,7 @@ body {
     text-align: center;
     border-bottom-style: solid;
     border-bottom-width: 1px;
-    border-bottom-color: rgba(0,0,0,.125);
+    border-bottom-color: rgba(255, 255, 255, 0.125);
     padding: 2rem;
 
 }
@@ -84,18 +84,20 @@ body {
     border-bottom-right-radius: 200px;
     position: relative;
     z-index: 1;
-    padding: 6rem 2rem;
+    padding: 2rem 2rem;
     overflow: hidden;
     background-color: black;
 }
 
 .about-me {
-    float: left;
-    padding-left: 150px;
+    margin: auto;
+    width: 60%;
+    padding: 10px;
 }
 
 .tech {
-    float: right;
+    display: flex;
+    flex-direction: column;
 }
 
 .svg {
@@ -211,11 +213,28 @@ body {
     transform: translateX(26px);
   }
 
-/* Resume styles */
+/* Resume Styles */
 .resume-left {
     float: left;
+    margin: auto;
 }
 
 .resume-right {
     float: right;
+    margin-right: auto;
+}
+
+/* Deployed Projects Styles */
+.project {
+    margin: auto;
+}
+
+.deployed-projects {
+    float: left;
+    margin: auto;
+}
+
+.solo-work {
+    float: right;
+    margin-right: auto;
 }
